--- a/MusicQuizGame/index.html
+++ b/MusicQuizGame/index.html
@@ -32,7 +32,7 @@
             <p id="finalScore"></p>
             <p id="refresh">Please <b>Refresh</b> to start the game again!</p>
         </div>
-<!-- controls to see it -->
+<!-- add "controls" to see it -->
         <audio id="backgroundMusic" loop muted>
             <source src="./Music/quiz-countdown-194417.mp3" type="audio/mp3">
         </audio>
