--- a/FeedbackForm/index.html
+++ b/FeedbackForm/index.html
@@ -9,31 +9,37 @@
 </head>
 
 <body>
-    <div>
-        <h1>Leave your feedback!</h1>
-        <div class="feedback-container">
-            <form>
+    <div class="wrapper">
+
+        <h1>Leave your Feedback!</h1>
+
+        <div class="container">
+            <form id="form">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                <input type="text" id="name" placeholder="Enter your name" />
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                <input type="email" id="email" placeholder="Enter your email" />
 
                 <label for="rating">Rating:</label>
-                <select id="rating" name="rating">
-                    <option value="" disabled selected>Select a rating</option>
+                <select id="rating" >
+                    <option value="" disabled selected>Select rating</option>
                     <option value="excellent">Excellent</option>
                     <option value="good">Good</option>
-                    <option value="average">Average</option>
+                    <option value="normal">Normal</option>
                     <option value="poor">Poor</option>
                 </select>
 
                 <label for="comments">Comments:</label>
-                <textarea id="comments" name="comments" rows="4"></textarea>
+                <textarea name="commnets" id="comments"></textarea>
 
-                <button type="submit" id="submitBtn">Submit Feedback</button>
+                <button id="submitBtn">Submit Feedback</button>
             </form>
+
+            <p id="message"></p>
+
         </div>
+
     </div>
 
     <script src="./script.js"></script>
