--- a/FeedbackForm/index.html
+++ b/FeedbackForm/index.html
@@ -36,7 +36,7 @@
                 <button id="submitBtn">Submit Feedback</button>
             </form>
 
-            <button id="feedbackBtn">view Feedbacks</button>
+            <button id="feedbackBtn">View Feedbacks</button>
             <div id="adminModal" class="modal">
                 <div class="modal-content">
                     <span id="closeModal" class="close">×</span>
