--- a/FeedbackForm/reviews.html
+++ b/FeedbackForm/reviews.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <div class="container">
+    <div class="reviewContainer">
         <h1>Reviews:</h1>
+        <ul id="reviewList">
+
+        </ul>
     </div>
+    <script src="./reviews.js"></script>
 </body>
 
 </html>
